<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect lastname</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No lastname captured</string>
    <string name="ocr_error">"Error reading lastname: %1$s"</string>
    <string name="app_name">Citesnap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="bookshelf">Book Shelf</string>
    <string name="quotes">Quotes</string>
    <string name="profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="title">Book Title</string>
    <string name="author">Author Name</string>
    <string name="isbn">ISBN</string>
    <string name="searchonline">Search Online</string>
    <string name="addbook">Add Book</string>
    <string name="enter_title_hint">Book Title</string>
    <string name="enter_author_hint">Author Name</string>
    <string name="enter_isbn_hint">ISBN Number</string>
    <string name="add_book_current">I am currently reading this book</string>
    <string name="camera_settings">Camera Settings</string>
    <string name="default_settings">Default Settings</string>
    <string name="apply">Apply</string>
    <string name="capture_quote">Capture Quote</string>
    <string name="save_quote">Save Quote</string>
    <string name="choose_quote_book">Where did you find that quote?</string>
    <string name="choose_quote">Select sentences to quote</string>
    <string name="add_quote">Add Quote</string>
    <string name="choose_quote_category">How would you describe this quote?</string>
    <string name="select_at_least_one">Select at least one sentence</string>
</resources>
