<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_bookshelf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.citesnap.android.app.main.BookShelfActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/booktitle_label" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_title_hint"
            android:ems="10"
            android:id="@+id/booktitle_entry" />

        <TextView
            android:text="@string/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/author_label" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_author_hint"
            android:ems="10"
            android:id="@+id/author_entry" />

        <TextView
            android:text="@string/isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isbn_label" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_isbn_hint"
            android:ems="10"
            android:id="@+id/isbn_entry" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/add_book_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/searchonline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_online_button"
                android:layout_weight="1" />

            <Button
                android:text="@string/addbook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_book_button"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
