<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_bookshelf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.citesnap.android.app.main.QuotesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/camera_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/use_flash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/use_flash_checkbox"
            android:layout_weight="1"
            android:checked="true" />

        <CheckBox
            android:text="@string/auto_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auto_focus_checkbox"
            android:layout_weight="1"
            android:checked="true" />

        <Button
            android:text="@string/default_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/default_settings_button"
            android:layout_weight="1" />

        <Button
            android:text="@string/apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apply_settings_button"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
