<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_bookshelf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.citesnap.android.app.main.BookShelfActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/choose_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/choose_quote" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="253dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/list_quote_parts"/>

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/final_quote" />

        <TextView
            android:text="@string/choose_quote_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/choose_quote_book" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/book_selection_spinner" />

        <TextView
            android:text="@string/choose_quote_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/choose_quote_category" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/category_selection_spinner" />

        <Button
            android:text="@string/save_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_quote" />

    </LinearLayout>

</RelativeLayout>
